# UniLab-g1-box-tracking

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_zh.md  REFACTORING_SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml
benchmark/: benchmark_ane_inference.py  benchmark_ane_peak.py  benchmark_backends.py  benchmark_conversions.py  benchmark_env_step.py  benchmark_forward_reset_methods.py  benchmark_gpu_buffer.py  benchmark_ipc_buffer_layout.py  benchmark_ipc_index_sort.py  benchmark_ipc_weight_sync.py  benchmark_mj_step.py  benchmark_mlp_inference.py  benchmark_mujoco_vs_motrix.py  benchmark_postprocess.py  benchmark_rollout_backend.py  benchmark_sample_overhead.py  benchmark_sim.py  smoke_test.py
benchmark/core/: __init__.py  output.py  plotting.py  visualize_collection_profile.py
benchmark/xmls/humanoid/: humanoid.xml
cfg/train/: README.md  g1_box_motrix_scaling_crl.yaml
conf/appo/task/: g1_flip_tracking.yaml
conf/offpolicy/: config.yaml
conf/offpolicy/algo/: sac.yaml  scaling_crl.yaml
conf/offpolicy/reward/: g1_sac_motrix.yaml  g1_sac_mujoco.yaml
conf/ppo/: config.yaml
conf/ppo/reward/: g1_ppo_mujoco.yaml
conf/ppo/task/: g1_flip_tracking.yaml  g1_motion_tracking.yaml
conf/ppo/task/allegro_inhand/: motrix.yaml
conf/ppo/task/allegro_inhand_grasp/: motrix.yaml
conf/ppo/task/g1_walk_flat/: motrix.yaml
conf/ppo/task/go2w_joystick_rough_tiles/: motrix.yaml
docs/developers/adr/: ADR-0005-unified-obs-critic-env-and-ipc-contract.md
docs/developers/zh_CN/: CONTRIBUTING.md
docs/en/: 01-getting-started.md
docs/ja/: 01-getting-started.md  CONTRIBUTING.md  README.md
docs/ko/: 01-getting-started.md  CONTRIBUTING.md  README.md
docs/sphinx/source/: conf.py
docs/sphinx/source/en/: index.md
docs/users/zh_CN/: 05-motion-tracking.md
docs/zh_CN/: 00-development-architecture.md  01-getting-started.md  02-simulation-backends.md  03-training.md  04-algorithms.md  05-g1-motion-tracking.md  06-collaboration.md  CONTRIBUTING.md  README.md
docs/zh_CN/adr/: ADR-0004-registry-bootstrap-contract.md
notebook/: demo.ipynb
scripts/: check_docs.py  play_interactive.py  train_appo.py  train_boprl.py  train_fast_sac.py  train_fast_td3.py  train_mlx_ppo.py  train_offpolicy.py  train_rsl_rl.py  visualization_env.py
scripts/locomotion/: keyboard_interactive.py
scripts/motion/: README.md  bones_seed_csv_to_npz.py  build_lifting_box_platform.py  build_lifting_boxtracking_npz.py  csv_to_npz.py  lifting.npz  lifting_box_platform.npy  lifting_unilab.npz  lifting_unilab_box.npz  mujoco_motion_layout.py  remap_fullbody_npz.py  remap_lifting_to_unilab.py  replay_bones_seed_csv.py  replay_npz.py  replay_npz_motrix.py
src/unilab/: cli.py  demo.py  structured_configs.py
src/unilab/algorithms/scaling_crl/: __init__.py
src/unilab/algos/torch/: rsl_rl_ppo.py
src/unilab/assets/: hub.py
src/unilab/base/: np_env.py  registry.py
src/unilab/base/backend/: motrix_backend.py  mujoco_backend.py
src/unilab/config/: structured_configs.py
src/unilab/envs/manipulation/: __init__.py
src/unilab/envs/motion_tracking/: __init__.py
src/unilab/ipc/: replay_buffer.py
src/unilab/logging/: offpolicy.py
src/unilab/tasks/: g1_box_placement.py
src/unilab/tools/: __init__.py  completion.py  export_scene.py  viz_nan.py
src/unilab/training/: __init__.py  run.py
src/unilab/utils/: device_utils.py  final_observation.py  math_utils.py  nan_guard.py  obs_utils.py  offpolicy_logger.py  onpolicy_logger.py  reward_utils.py  rsl_rl_vec_env_wrapper.py  xml_utils.py
src/unilab/visualization/: interactive_playback.py
tests/: conftest.py  test_cli.py  test_completion.py  test_export_scene.py  test_nan_guard.py
tests/algos/: test_appo_runner.py  test_appo_runner_unit.py  test_appo_worker.py  test_fast_sac_compile.py  test_flash_sac_learner.py  test_hora_contract.py  test_mlx_ppo.py  test_offpolicy_checkpoint.py  test_offpolicy_double_buffer_runner.py  test_offpolicy_runner.py  test_offpolicy_runner_unit.py  test_rsl_rl_ppo.py  test_rsl_rl_runner.py  test_scaling_crl.py
tests/base/: test_np_env.py  test_reward_override.py
tests/config/: test_config_system.py  test_locomotion_params.py  test_reward_injection.py
tests/envs/: test_allegro_domain_randomization.py  test_env_configs.py  test_go2_obs_noise.py  test_motion_loader.py
tests/envs/manipulation/: test_g1_box_placement.py
tests/integration/: test_reward_injection_integration.py
tests/scripts/: doc_checks.py  test_check_docs.py  test_mujoco_motion_layout.py  test_replay_npz.py  test_train_script_configs.py  test_train_scripts.py  test_visualization_entrypoints.py
tests/utils/: test_algo_utils.py  test_experiment_tracking.py  test_final_observation.py  test_math_utils.py  test_torch_utils.py  test_utils_package_policy.py
unilab/: __init__.py
unilab/algo/boprl/: learner.py  runner.py  storage.py  worker.py
unilab/algos/mlx/ppo/: model.py  ppo.py  runner.py
unilab/algos/torch/appo/: learner.py  runner.py  worker.py
unilab/algos/torch/common/: __init__.py  logger.py  stability.py  worker.py
unilab/algos/torch/fast_sac/: learner.py  runner.py
unilab/algos/torch/fast_td3/: learner.py  runner.py
unilab/algos/torch/offpolicy/: runner.py  worker.py
unilab/base/: __init__.py  base.py  curriculum.py  dtype_config.py  np_env.py  registry.py
unilab/base/backend/: __init__.py  base.py  motrix_backend.py  motrix_numba_backend.py  mujoco_backend.py
unilab/config/: locomotion_params.py  manipulation_params.py
unilab/envs/: __init__.py  curriculum.py
unilab/envs/locomotion/: task_registry.py
unilab/envs/locomotion/g1/: __init__.py  base.py  joystick.py  joystick_sac.py
unilab/envs/locomotion/go1/: __init__.py  base.py  joystick.py
unilab/envs/locomotion/go2/: __init__.py  base.py  (+2 more)
unilab/envs/mujoco_env/: mj_env.py
unilab/ipc/: __init__.py  async_runner.py  replay_buffer.py  shared_storage.py  sync_barrier.py  weight_sync.py
unilab/utils/: __init__.py  algo_utils.py  math_utils.py  offpolicy_logger.py  onpolicy_logger.py  render_many.py  rsl_rl_compat.py
(+184 files in other folders)
