[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unilab"
version = "0.1.0"
description = "Universal Lab for Robot Learning"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "torch",
    "mujoco-uni==3.5.0.post2",
    "gymnasium",
    "imageio",
    "etils",
    "ml_collections",
    "tensordict",
    "rsl-rl-lib>=5.0.0",
    "packaging",
    "mediapy",
    "tensorboard",
    "rich",
    "typing-extensions",
    "mlx ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]
motrix = [
    "motrixsim==0.6.0",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
mujoco-uni = { index = "test-pypi" }

[tool.hatch.build.targets.wheel]
packages = ["unilab"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
