[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[project]
name = "unilab"
version = "0.1.0"
description = "Universal Lab for Robot Learning"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "torch==2.7.0",
    "mujoco-uni==3.8.0",
    "gymnasium",
    "imageio",
    "etils",
    "hydra-core>=1.3",
    "tensordict",
    "rsl-rl-lib>=5.0.0",
    "packaging",
    "mediapy",
    "tensorboard",
    "setuptools<70",
    "rich",
    "tqdm",
    "typing-extensions",
    "mlx ; sys_platform == 'darwin'",
    "lark>=1.3.1",
    "wandb",
    "notebook>=7.5.5",
    "onnxruntime<1.20 ; python_version < '3.11'",
    "onnxruntime>=1.20 ; python_version >= '3.11'",
    "huggingface_hub>=0.25",
    "ninja ; sys_platform == 'linux'",
]

[project.scripts]
train = "unilab.cli:train_main"
eval = "unilab.cli:eval_main"
demo = "unilab.cli:demo_main"
unilab-complete = "unilab.tools.completion:main"
unilab-viz-nan = "unilab.tools.viz_nan:main"
unilab-export-scene = "unilab.tools.export_scene:main"
unilab-render-teaser = "unilab.tools.render_teaser:main"

[project.optional-dependencies]
motrix = ["motrixsim-core==0.8.1.dev104632"]
viser = ["viser>=1.0.26", "trimesh>=3.21.7"]

[dependency-groups]
dev = ["pytest", "pytest-cov", "ruff", "mypy", "pyright>=1.1.408"]

[[tool.uv.index]]
name = "motphys-pypi"
url = "https://pypi.motphys.com/simple/"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
motrixsim-core = { index = "motphys-pypi" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform=='linux'" },
]

[tool.uv]
exclude-dependencies = ["torchvision"]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]
extend-exclude = [".history"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",
    "N806",
    "E402",
    "F401",
    "N801",
    "F821",
    "E741",
    "N802",
    "N803",
    "N812",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
no_site_packages = true
exclude = [
    "src/unilab/algos/torch/rsl_rl/", # vendored third-party, tracked in .gitignore
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running training or script smoke tests, or cumulatively expensive backend matrices",
]
addopts = "--tb=short -m 'not slow'"

[tool.coverage.run]
source = ["unilab"]
omit = ["*/rsl_rl/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.pyright]
pythonVersion = "3.10"
venvPath = "."
venv = ".venv"
include = ["src/unilab"]
exclude = [
    "src/unilab/algos/torch/rsl_rl/",       # vendored third-party
    "src/unilab/algos/mlx/",                # MLX stubs incomplete, macOS-only
    "src/unilab/algos/torch/common/ane_*",  # Apple Neural Engine, macOS-only
    "src/unilab/base/backend/",             # mujoco-uni stubs mismatch; optional backends
    "src/unilab/envs/",                     # mujoco-uni internal API, stubs mismatch
    "src/unilab/terrains/",                 # mujoco-uni MjSpec API, stubs mismatch
    "src/unilab/training/monitoring.py",    # optional pynvml/psutil deps
    "src/unilab/visualization/",            # direct mujoco C bindings + optional viser deps
]
reportMissingImports = "warning"
reportMissingModuleSource = "none"
